[#noissue] fix scroll gap

--- a/web/src/main/angular/src/app/core/components/alarm-rule-list/alarm-rule-list-container.component.css
+++ b/web/src/main/angular/src/app/core/components/alarm-rule-list/alarm-rule-list-container.component.css
@@ -43,6 +43,7 @@
 }
 
 .l-alarm-rules-th {
+    overflow-y: scroll;
     display: flex;
     height: 30px;
     position: relative;
