--- a/web/src/main/angular/src/app/core/components/webhook-list/webhook-list.component.css
+++ b/web/src/main/angular/src/app/core/components/webhook-list/webhook-list.component.css
@@ -1,3 +1,7 @@
+:host {
+    overflow-y: scroll;
+}
+
 li {
     color: var(--text-primary);
     /* height: 28px; */
